--- a/backend/apache-conf/zz-spacewalk-server.conf
+++ b/backend/apache-conf/zz-spacewalk-server.conf
@@ -5,7 +5,8 @@
 ##
 ## Spacewalk settings
 ##
-
+#
+<IfDefine !ISSUSE>
 <VirtualHost *>
 
 <IfModule mod_jk.c>
@@ -22,6 +23,9 @@ RewriteOptions inherit
 </VirtualHost>
 
 # Override default httpd prefork settings
+#
+# On SUSE use /etc/apache2/server-tuning.conf
+#
 <IfModule prefork.c>
 StartServers       8
 MinSpareServers    5
@@ -30,4 +34,5 @@ ServerLimit      256
 MaxClients       256
 MaxRequestsPerChild  200
 </IfModule>
+</IfDefine>
 
