--- a/backend/rhn-conf/rhn.conf
+++ b/backend/rhn-conf/rhn.conf
@@ -18,3 +18,6 @@ enable_snapshots = 1
 ## SSL for database (PostgreSQL) connection
 db_ssl_enabled = 0
 db_sslrootcert = /etc/rhn/postgresql-db-root-ca.cert
+
+## apache document root dir
+documentroot = #DOCUMENTROOT#
