added Fedora 21 channels

--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -94,6 +94,41 @@ checksum = sha256
 base_channels = fedora20-%(arch)s
 yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=updates-released-debug-f20&arch=%(arch)s
 
+[fedora21]
+archs    = %(_x86_archs)s
+checksum = sha256
+name     = Fedora 21 (%(arch)s)
+gpgkey_url = https://fedoraproject.org/static/95A43F54.txt
+gpgkey_id = 95A43F54
+gpgkey_fingerprint = 6596 B8FB ABDA 5227 A9C5  B59E 89AD 4E87 95A4 3F54
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=fedora-21&arch=%(arch)s
+dist_map_release = 21
+
+[fedora21-updates]
+label    = %(base_channel)s-updates
+name     = Fedora 21 Updates (%(arch)s)
+archs    = %(_x86_archs)s
+checksum = sha256
+base_channels = fedora21-%(arch)s
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=updates-released-f21&arch=%(arch)s
+
+[fedora21-debug]
+label    = %(base_channel)s-debug
+name    = Fedora 21 Debug (%(arch)s)
+archs    = %(_x86_archs)s
+checksum = sha256
+base_channels = fedora21-%(arch)s
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=fedora-debug-21&arch=%(arch)s
+
+[fedora21-updates-debug]
+label    = %(base_channel)s-updates-debug
+name    = Fedora 21 Updates Debug (%(arch)s)
+archs    = %(_x86_archs)s
+checksum = sha256
+base_channels = fedora21-%(arch)s
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=updates-released-debug-f21&arch=%(arch)s
+
+
 [centos7]
 archs    = %(_x86_archs)s
 name     = CentOS 7 (%(arch)s)
