1170064 - equality is too strict

--- a/spacewalk/config/etc/rhn/satellite-httpd/conf/rhn/rhn_monitoring.conf
+++ b/spacewalk/config/etc/rhn/satellite-httpd/conf/rhn/rhn_monitoring.conf
@@ -3,7 +3,7 @@ KeepAlive On
 MaxKeepAliveRequests 400
 KeepAliveTimeout 15
 RewriteEngine on
-<IfVersion == 2.2>
+<IfVersion < 2.4>
 RewriteLock run/rhnccrewrite.lock
 </IfVersion>
 RewriteMap KeyToSatId prg:/usr/share/rhn/satidmap.pl
