Fix copy&paste error in httpd config. This fixes 403 error in apache 2.4.

--- a/spec-tree/momentjs/httpd-momentjs.conf
+++ b/spec-tree/momentjs/httpd-momentjs.conf
@@ -1,8 +1,6 @@
 alias /javascript/momentjs /usr/share/momentjs
-
-alias /bootstrap/less /usr/share/bootstrap/less
 <IfVersion >= 2.4>
-  <Directory /usr/share/bootstrap/less>
+  <Directory /usr/share/momentjs>
     Require all granted
   </Directory>
 </IfVersion>
