Fix 403 errors for proxy wsgi requests

--- a/proxy/proxy/httpd-conf/spacewalk-proxy-wsgi.conf
+++ b/proxy/proxy/httpd-conf/spacewalk-proxy-wsgi.conf
@@ -4,6 +4,12 @@
 
 WSGIPythonPath "/usr/share/rhn"
 
+<IfVersion >= 2.4>
+    <Directory /usr/share/rhn/wsgi>
+        Require all granted
+    </Directory>
+</IfVersion>
+
 <LocationMatch "^/*">
     DirectoryIndex _rhn_proxy/index.html index.html index.htm index.html.var index.shtml index.php index.php4 index.php3 index.phtml index.cgi
 </LocationMatch>
