--- a/rel-eng/tito.props
+++ b/rel-eng/tito.props
@@ -27,3 +27,7 @@ blacklist=jabberd-selinux oracle-server-admin oracle-server-scripts rhnclient sm
 [spacewalk-nightly-fedora20]
 disttag = .fc20
 blacklist=jabberd-selinux oracle-server-admin oracle-server-scripts rhnclient smartpm apt-spacewalk python-hwdata oracle-rhnsat-selinux mod_perl nodejs-less nodejs scons v8 gyp http-parser libuv c-ares19 nodejs-packaging ycssmin perl-Mail-RFC822-Address
+
+[spacewalk-nightly-fedora21]
+disttag = .fc21
+blacklist=jabberd-selinux oracle-server-admin oracle-server-scripts rhnclient smartpm apt-spacewalk python-hwdata oracle-rhnsat-selinux mod_perl nodejs-less nodejs scons v8 gyp http-parser libuv c-ares19 nodejs-packaging ycssmin perl-Mail-RFC822-Address
