--- a/rel-eng/build-missing-builds.conf
+++ b/rel-eng/build-missing-builds.conf
@@ -1,4 +1,4 @@
 TITO_RELEASER=koji
 
-TAGS="spacewalk-nightly-rhel5 spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora19 spacewalk-nightly-fedora20"
+TAGS="spacewalk-nightly-rhel5 spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora19 spacewalk-nightly-fedora20 spacewalk-nightly-fedora21"
 FEDORA_UPLOAD=0
