move jpackage.jars to a separate file
need to differentiate jars on different OSs

--- a/search-server/spacewalk-search/build.xml
+++ b/search-server/spacewalk-search/build.xml
@@ -1,5 +1,6 @@
 <project name="search-server" basedir="." default="all">
     <import file="buildconf/build-utils.xml" />
+    <import file="buildconf/build-props.xml" />
 
     <property file="build.properties" />
 
