introduce notify_threshold for osa-dispatcher (bsc#915581)
if notify_threshold = <num> is specified in rhn.conf, osa-dispatcher
will only notify notify_threshold - pickedUp clients about new jobs

--- a/client/tools/osad/rhn-conf/rhn_osa-dispatcher.conf
+++ b/client/tools/osad/rhn-conf/rhn_osa-dispatcher.conf
@@ -6,3 +6,9 @@ osa_ssl_cert  = /usr/share/rhn/RHNS-OSA-CERT
 jabber_server   = jabberserver.example.org:5234
 
 poll_interval = 5
+
+# to manage the notify threshold add
+# osa-dispatcher.notify_threshold = <num>
+# in rhn.conf
+# current default is unlimited
+#notify_threshold =
