explain the new notify_threshold param

--- a/client/tools/osad/rhn-conf/rhn_osa-dispatcher.conf
+++ b/client/tools/osad/rhn-conf/rhn_osa-dispatcher.conf
@@ -7,8 +7,7 @@ jabber_server   = jabberserver.example.org:5234
 
 poll_interval = 5
 
-# to manage the notify threshold add
-# osa-dispatcher.notify_threshold = <num>
-# in rhn.conf
+# number of systems that can run actions until
+# osad-dispatcher stops notifying more clients.
 # current default is unlimited
-#notify_threshold =
+notify_threshold =
