--- a/java/code/src/log4j.properties
+++ b/java/code/src/log4j.properties
@@ -1,4 +1,7 @@
-log4j.appender.RootAppender=org.apache.log4j.ConsoleAppender
+log4j.appender.RootAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.RootAppender.File=/var/log/rhn/rhn_web_ui.log
+log4j.appender.RootAppender.MaxFileSize=10MB
+log4j.appender.RootAppender.MaxBackupIndex=5
 log4j.appender.RootAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.RootAppender.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.rootLogger=WARN,RootAppender
