make the error pages accessible from apache

--- a/java/code/webapp/WEB-INF/web.xml
+++ b/java/code/webapp/WEB-INF/web.xml
@@ -311,11 +311,11 @@
 
   <error-page>
       <error-code>404</error-code>
-      <location>/WEB-INF/pages/common/errors/404.jsp</location>
+      <location>/errors/404.jsp</location>
   </error-page>
   <error-page>
       <error-code>500</error-code>
-      <location>/WEB-INF/pages/common/errors/500.jsp</location>
+      <location>/errors/500.jsp</location>
   </error-page>
 
 </web-app>
