--- a/spacewalk/config/etc/httpd/conf.d/zz-spacewalk-www.conf
+++ b/spacewalk/config/etc/httpd/conf.d/zz-spacewalk-www.conf
@@ -24,10 +24,8 @@ PerlPassEnv NLS_LANG
 PerlOptions +GlobalRequest
 
 # generic html; no session for vulnerability bots
-ErrorDocument 403 /errors/403.html
-ErrorDocument 404 /errors/404.html
-ErrorDocument 413 /errors/413.html
-ErrorDocument 500 /errors/500.html
+ErrorDocument 404 /rhn/errors/404.jsp
+ErrorDocument 500 /rhn/errors/500.jsp
 
 
 <Directory /var/www/html/network>
