removing unused RHN::Mail

--- a/web/conf/rhn_web.conf
+++ b/web/conf/rhn_web.conf
@@ -16,7 +16,7 @@ web.db_tz_offset = 0
 # show PXT::Debug->log entries of this level and lower
 web.debug = 1
 
-# RHN::Mail never send email to these domains
+# SmtpMail never send email to these domains
 web.disallowed_mail_domains =
 
 # URL for the download server
@@ -65,7 +65,7 @@ web.pam_auth_service =
 # Turn on DBI::Profile profiling of queries
 web.profile_queries = 0
 
-# RHN::Mail will only send e-mail to addresses matching these domains if
+# SmtpMail will only send e-mail to addresses matching these domains if
 # set.
 web.restrict_mail_domains = 
 
