1191253 - update squid directives to use if-modified-since header

--- a/proxy/installer/squid.conf
+++ b/proxy/installer/squid.conf
@@ -23,7 +23,7 @@ cache_replacement_policy heap LFUDA
 memory_replacement_policy heap GDSF
 
 # cache repodata only few minutes and then query parent whether it is fresh
-refresh_pattern /XMLRPC/GET-REQ/.*/repodata/.*\.xml.*$ 0 1% 525960
+refresh_pattern /XMLRPC/GET-REQ/.*/repodata/.*\.xml.*$ 0 1% 1440 ignore-no-cache reload-into-ims refresh-ims
 # rpm will hardly ever change, force to chache it for very long time
 refresh_pattern  \.rpm$  10080 100% 525960 override-expire override-lastmod ignore-reload reload-into-ims
 refresh_pattern 	.		0	100%	525960
