--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -753,6 +753,168 @@ gpgkey_id = %(_spacewalk_gpgkey_id)s
 gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/7/%(arch)s/
 
+[spacewalk23-server-centos5]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos5-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/5/%(arch)s/
+
+[spacewalk23-server-centos6]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/6/%(arch)s/
+
+[spacewalk23-server-scientific6]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = scientific6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/6/%(arch)s/
+
+[spacewalk23-server-fedora19]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora19-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/Fedora/19/%(arch)s/
+
+[spacewalk23-server-fedora20]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora20-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/Fedora/20/%(arch)s/
+
+[spacewalk23-server-fedora21]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora21-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/Fedora/21/%(arch)s/
+
+[spacewalk23-server-oraclelinux5]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux5-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/5/%(arch)s/
+
+[spacewalk23-server-oraclelinux6]
+name     = Spacewalk Server (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/6/%(arch)s/
+
+[spacewalk23-client-centos5]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos5-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/5/%(arch)s/
+
+[spacewalk23-client-centos6]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/6/%(arch)s/
+
+[spacewalk23-client-centos7]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/7/%(arch)s/
+
+[spacewalk23-client-scientific6]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = scientific6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/6/%(arch)s/
+
+[spacewalk23-client-fedora19]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora19-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/Fedora/19/%(arch)s/
+
+[spacewalk23-client-fedora20]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora20-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/Fedora/20/%(arch)s/
+
+[spacewalk23-client-fedora21]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora21-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/Fedora/21/%(arch)s/
+
+[spacewalk23-client-oraclelinux5]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux5-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/5/%(arch)s/
+
+[spacewalk23-client-oraclelinux6]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/6/%(arch)s/
+
+[spacewalk23-client-oraclelinux7]
+name     = Spacewalk Client (N) for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/7/%(arch)s/
+
 [spacewalk-nightly-server-centos5]
 name     = Spacewalk Server (N) for %(base_channel_name)s
 archs    = %(_x86_archs)s
