setup builds for Spacewalk 2.3 tags

--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -1,6 +1,6 @@
 [koji]
 releaser = tito.release.KojiGitReleaser
-autobuild_tags = spacewalk-nightly-rhel5 spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora20 spacewalk-nightly-fedora21
+autobuild_tags = spacewalk-2.3-rhel5 spacewalk-2.3-rhel6 spacewalk-2.3-rhel7 spacewalk-2.3-fedora20 spacewalk-2.3-fedora21
 git_url = git://git@github.com/spacewalkproject/spacewalk.git
 
 #[fedora-git]
