--- a/rel-eng/build-missing-builds.conf
+++ b/rel-eng/build-missing-builds.conf
@@ -1,4 +1,4 @@
 TITO_RELEASER=koji
 
-TAGS="spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora20 spacewalk-nightly-fedora21"
+TAGS="spacewalk-2.3-rhel6 spacewalk-2.3-rhel7 spacewalk-2.3-fedora20 spacewalk-2.3-fedora21"
 FEDORA_UPLOAD=0
