1096263 - force taskomatic to use UTF-8
e.g. kickstartfile-sync-bunch was not writing unicode characters to kickstart files

--- a/java/conf/default/rhn_taskomatic_daemon.conf
+++ b/java/conf/default/rhn_taskomatic_daemon.conf
@@ -82,9 +82,10 @@ wrapper.java.classpath.60=/usr/share/java/mchange-commons.jar
 
 # Java Additional Parameters
 wrapper.java.additional.1=-Dibm.dst.compatibility=true
+wrapper.java.additional.2=-Dfile.encoding=UTF-8
 ### NOTE: Only uncomment these next two lines if you are running IBM Java ###
-#wrapper.java.additional.2=-Xdump:heap:file=/var/crash/heapdump.%Y%m%d.%H%M%S.%pid.%seq.phd
-#wrapper.java.additional.3=-Xdump:java:file=/var/crash/javacore.%Y%m%d.%H%M%S.%pid.%seq.txt
+#wrapper.java.additional.3=-Xdump:heap:file=/var/crash/heapdump.%Y%m%d.%H%M%S.%pid.%seq.phd
+#wrapper.java.additional.4=-Xdump:java:file=/var/crash/javacore.%Y%m%d.%H%M%S.%pid.%seq.txt
 
 # Initial Java Heap Size (in MB)
 wrapper.java.initmemory=256
