enable fedora-git releaser
I use that for release packages into Fedora

--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -3,6 +3,6 @@ releaser = tito.release.KojiGitReleaser
 autobuild_tags = spacewalk-2.3-rhel5 spacewalk-2.3-rhel6 spacewalk-2.3-rhel7 spacewalk-2.3-fedora20 spacewalk-2.3-fedora21
 git_url = git://git@github.com/spacewalkproject/spacewalk.git
 
-#[fedora-git]
-#releaser = tito.release.FedoraGitReleaser
-#branches = master
+[fedora-git]
+releaser = tito.release.FedoraGitReleaser
+branches = master
