allow rhn-client-tool use yum or dnf

--- a/client/rhel/rhn-client-tools/src/up2date_client/Makefile
+++ b/client/rhel/rhn-client-tools/src/up2date_client/Makefile
@@ -15,7 +15,7 @@ FILES		:= config gui hardware progress \
 		   messageWindow rhncli \
 		   rhnreg_constants \
                    pkgplatform debUtils pkgUtils \
-                   yumPlugin
+                   pmPlugin
 
 PYFILES 	:= $(addsuffix .py, $(FILES))
 PYCFILES	:= $(addsuffix .pyc, $(FILES))
