--- a/rel-eng/tito.props
+++ b/rel-eng/tito.props
@@ -24,3 +24,7 @@ blacklist=jabberd-selinux oracle-server-admin oracle-server-scripts apt-spacewal
 [spacewalk-nightly-fedora21]
 disttag = .fc21
 blacklist=jabberd-selinux oracle-server-admin oracle-server-scripts apt-spacewalk python-hwdata oracle-rhnsat-selinux mod_perl nodejs-less nodejs scons v8 gyp http-parser libuv c-ares19 nodejs-packaging ycssmin perl-Mail-RFC822-Address
+
+[spacewalk-nightly-fedora22]
+disttag = .fc22
+blacklist=jabberd-selinux oracle-server-admin oracle-server-scripts apt-spacewalk python-hwdata oracle-rhnsat-selinux mod_perl nodejs-less nodejs scons v8 gyp http-parser libuv c-ares19 nodejs-packaging ycssmin perl-Mail-RFC822-Address
