workaround for yum dependency resolution bug when building spacewalk-utils
we don't have dependent Oracle packages in public repo

--- a/rel-eng/travis/mock/spacewalk.cfg
+++ b/rel-eng/travis/mock/spacewalk.cfg
@@ -48,6 +48,7 @@ name=Spacewalk nightly
 baseurl=http://yum.spacewalkproject.org/nightly/Fedora/21/x86_64/
 enabled=1
 gpgcheck=0
+exclude=spacewalk-backend-sql-oracle
 
 [spacewalk-nightly-client]
 name=Spacewalk nightly client
