--- a/rel-eng/build-missing-builds.conf
+++ b/rel-eng/build-missing-builds.conf
@@ -1,4 +1,4 @@
 TITO_RELEASER=koji
 
-TAGS="spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora21 spacewalk-nightly-fedora22"
+TAGS="spacewalk-devel-rhel6 spacewalk-devel-rhel7 spacewalk-devel-fedora21 spacewalk-devel-fedora22"
 FEDORA_UPLOAD=0
