support more frontend languages

--- a/java/conf/rhn_java.conf
+++ b/java/conf/rhn_java.conf
@@ -35,7 +35,7 @@ java.l10n_debug_marker=$$$
 java.l10n_missingmessage_exceptions=false
 
 # List of supported locales
-java.supported_locales=bn_IN,de,en_US,es,fr,gu,hi,it,ja,ko,pa,pt_BR,ru,ta,zh_CN,zh_TW
+java.supported_locales=bn_IN,ca,de,en_US,es,fr,gu,hi,it,ja,ko,pa,pt,pt_BR,ru,ta,zh_CN,zh_TW
 
 # List of countries to exclude for new user creation
 # This is currently: Cuba,Iran,Iraq,North Korea,Sudan,Syria
