--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -29,9 +29,9 @@ yum_repo_label = External - %(name)s
 ## now define some "macros"
 _x86_archs = i386, x86_64
 _centos4_archs = alpha, i386, ia64, s390, s390x, x86_64
-_spacewalk_gpgkey_url = http://yum.spacewalkproject.org/RPM-GPG-KEY-spacewalk-2012
-_spacewalk_gpgkey_id = 430A1C35
-_spacewalk_gpgkey_fingerprint = B6F4 CBE4 8B8F 45E1 85F8  34B2 9542 3D4E 430A 1C35
+_spacewalk_gpgkey_url = http://yum.spacewalkproject.org/RPM-GPG-KEY-spacewalk-2015
+_spacewalk_gpgkey_id = B8002DE1
+_spacewalk_gpgkey_fingerprint = A5FC 508C DD3C C46D 3C3B  4612 DCC9 81CD B800 2DE1
 
 
 [fedora20]
