have version in name

--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -314,7 +314,7 @@ yumrepo_url = http://mirrors.fedoraproject.org/mirrorlist?repo=epel-5&arch=%(arc
 
 
 [spacewalk22-server-centos5]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -323,7 +323,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2/RHEL/5/%(arch)s/
 
 [spacewalk22-server-centos6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -332,7 +332,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2/RHEL/6/%(arch)s/
 
 [spacewalk22-server-scientific6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = scientific6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -341,7 +341,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2/RHEL/6/%(arch)s/
 
 [spacewalk22-server-fedora20]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora20-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -350,7 +350,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2/Fedora/20/%(arch)s/
 
 [spacewalk22-server-oraclelinux5]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -359,7 +359,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2/RHEL/5/%(arch)s/
 
 [spacewalk22-server-oraclelinux6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -368,7 +368,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2/RHEL/6/%(arch)s/
 
 [spacewalk22-client-centos5]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -377,7 +377,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/5/%(arch)s/
 
 [spacewalk22-client-centos6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -386,7 +386,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/6/%(arch)s/
 
 [spacewalk22-client-centos7]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos7-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -395,7 +395,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/7/%(arch)s/
 
 [spacewalk22-client-scientific6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = scientific6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -404,7 +404,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/6/%(arch)s/
 
 [spacewalk22-client-fedora20]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora20-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -413,7 +413,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/Fedora/20/%(arch)s/
 
 [spacewalk22-client-oraclelinux5]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -422,7 +422,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/5/%(arch)s/
 
 [spacewalk22-client-oraclelinux6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -431,7 +431,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/6/%(arch)s/
 
 [spacewalk22-client-oraclelinux7]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.2 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux7-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -440,7 +440,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.2-client/RHEL/7/%(arch)s/
 
 [spacewalk23-server-centos6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -449,7 +449,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/6/%(arch)s/
 
 [spacewalk23-server-centos7]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos7-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -458,7 +458,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/7/%(arch)s/
 
 [spacewalk23-server-scientific6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = scientific6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -467,7 +467,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/6/%(arch)s/
 
 [spacewalk23-server-fedora20]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora20-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -476,7 +476,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3/Fedora/20/%(arch)s/
 
 [spacewalk23-server-fedora21]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora21-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -485,7 +485,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3/Fedora/21/%(arch)s/
 
 [spacewalk23-server-oraclelinux6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -494,7 +494,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/6/%(arch)s/
 
 [spacewalk23-server-oraclelinux7]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux7-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -503,7 +503,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3/RHEL/7/%(arch)s/
 
 [spacewalk23-client-centos5]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -512,7 +512,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/5/%(arch)s/
 
 [spacewalk23-client-centos6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -521,7 +521,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/6/%(arch)s/
 
 [spacewalk23-client-centos7]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos7-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -530,7 +530,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/7/%(arch)s/
 
 [spacewalk23-client-scientific6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = scientific6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -539,7 +539,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/6/%(arch)s/
 
 [spacewalk23-client-fedora20]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora20-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -548,7 +548,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/Fedora/20/%(arch)s/
 
 [spacewalk23-client-fedora21]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora21-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -557,7 +557,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/Fedora/21/%(arch)s/
 
 [spacewalk23-client-oraclelinux5]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -566,7 +566,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/5/%(arch)s/
 
 [spacewalk23-client-oraclelinux6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -575,7 +575,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/6/%(arch)s/
 
 [spacewalk23-client-oraclelinux7]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client 2.3 for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux7-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -584,7 +584,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/7/%(arch)s/
 
 [spacewalk-nightly-server-centos5]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -593,7 +593,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/5/%(arch)s/
 
 [spacewalk-nightly-server-centos6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -602,7 +602,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/6/%(arch)s/
 
 [spacewalk-nightly-server-scientific6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = scientific6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -611,7 +611,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/6/%(arch)s/
 
 [spacewalk-nightly-server-fedora20]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora20-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -620,7 +620,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/Fedora/20/%(arch)s/
 
 [spacewalk-nightly-server-oraclelinux5]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -629,7 +629,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/5/%(arch)s/
 
 [spacewalk-nightly-server-oraclelinux6]
-name     = Spacewalk Server (N) for %(base_channel_name)s
+name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -638,7 +638,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/6/%(arch)s/
 
 [spacewalk-nightly-client-centos5]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -647,7 +647,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/5/%(arch)s/
 
 [spacewalk-nightly-client-centos6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = centos6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -656,7 +656,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/6/%(arch)s/
 
 [spacewalk-nightly-client-scientific6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = scientific6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -665,7 +665,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/6/%(arch)s/
 
 [spacewalk-nightly-client-fedora20]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = fedora20-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -674,7 +674,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/Fedora/20/%(arch)s/
 
 [spacewalk-nightly-client-oraclelinux5]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux5-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
@@ -683,7 +683,7 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/5/%(arch)s/
 
 [spacewalk-nightly-client-oraclelinux6]
-name     = Spacewalk Client (N) for %(base_channel_name)s
+name     = Spacewalk Client nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
 base_channels = oraclelinux6-%(arch)s
 gpgkey_url = %(_spacewalk_gpgkey_url)s
